Fix main issue
"Long extension names misalign the icons"

--- a/src/popup.css
+++ b/src/popup.css
@@ -106,6 +106,7 @@ button {
 .ext > *:not(:first-child) {
   padding: 0 0.3em;
   opacity: 0.2;
+  flex-shrink: 0;
 }
 .ext:hover > * {
   opacity: 1;
